[project]
name = "fastapi-mock-datetime"
version = "0.1.0"
description = ""
authors = [
    {name = "Almaz Ilaletdinov",email = "a.ilaletdinov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "time-machine (>=2.19.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_mock_datetime"}]


[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
httpx = "0.28.1"
pytest-asyncio = "1.3.0"
ruff = "0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
